# pendomind

./: .cursorrules  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: prompts.txt
config/: quality_rules.yaml
docs/: PENDOMIND_PLAN.md  quality_control_architecture.md  tdd.md
pendomind/: config.py  main.py  memory.py
src/pendomind/: __init__.py  config.py  knowledge.py  main.py  middleware.py  quality.py  tools.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_knowledge.py  test_memory.py  test_middleware.py  test_quality.py  test_tools.py
