[project]
name = "pendomind"
version = "2.0.0"
description = "Simple memory persistence layer for Claude with semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yuri Bondarenko"}
]
keywords = ["mcp", "memory", "vector-db", "claude-code", "sqlite"]

dependencies = [
    "fastmcp>=2.9.0",
    "sqlite-vec>=0.1.6",
    "apsw>=3.40.0",  # SQLite wrapper with extension loading support
    "fastembed>=0.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-watch>=4.2.0",
    "numpy>=1.24.0",  # For mocking FastEmbed in tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pendomind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pendomind"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
